--- a/ml_notes/cs229/cs229_local.html
+++ b/ml_notes/cs229/cs229_local.html
@@ -259,6 +259,13 @@ y_0 &amp; = {\text{argmin}}_y \max_x f(x, y).
 <p><span class="math display">\[f(x, y_0) \le f(x_0, y_0) \le f(x_0, y) \quad \forall x, y,\]</span></p>
 <p>then</p>
 <p><span class="math display">\[\max_x \min_y f(x, y) \; = \; \min_y \max_x f(x, y).\]</span></p>
+<h3 id="the-name-of-kernels"><span class="header-section-number">3.1.2</span> The name of kernels</h3>
+<p>Quick side question: Why are kernels called kernels?</p>
+<p>I found <a href="http://math.stackexchange.com/questions/500920/word-origin-meaning-of-kernel-in-linear-algebra">this link</a> which states that the word <em>kernel</em>, in mathematics, was first used in the context of a group homomorphism <span class="math inline">\(f\)</span> to indicate the set <span class="math inline">\(f^{-1}(0),\)</span> the pre-image of the identity element. Interpreting the word <em>kernel</em> as meaning something like <em>core</em> or <em>seed</em>, this usage in group theory makes sense when thinking about <a href="https://en.wikipedia.org/wiki/Fundamental_theorem_on_homomorphisms#Group_theoretic_version">the first isomorphism theorem</a>.</p>
+<p>In the context of SVMs, the name <em>kernel</em> comes from the idea of a <a href="https://en.wikipedia.org/wiki/Positive-definite_kernel">positive-definite kernel</a>, which originated mainly in work done by James Mercer, although as far as I can tell the actual name <em>positive-definite kernel</em> came from a 1904 paper of David Hilbert on Fredholm integral equations of the second kind.</p>
+<p>Based on <a href="http://math.stackexchange.com/a/1281138/10785">this math.stackexchange answer</a>, it sounds like the group-theoretic and algebraic use cases — that is, the two listed above — of the word <em>kernel</em> are not formally linked. Rather, it seems that Ivar Fredholm used the French word <em>noyau</em> in a paper on integral equations that later became <em>kernel</em> in the aforementioned paper of Hilbert. <em>Noyau</em> roughly means <em>core</em>, and was perhaps used because it is inside an integral when a convolution is performed. The referenced answer states that the original Hilbert paper never justifies the term, so I suppose it’s up to folks who understand that paper to make an educated guess as to why it was chosen; or by looking at the corresponding Fredholm paper.</p>
+<h3 id="the-gaussian-kernel"><span class="header-section-number">3.1.3</span> The Gaussian kernel</h3>
+<p>NEXT: justify why this is a kernel</p>
 <div id="refs" class="references">
 
 </div>
