--- a/ml_notes/cs229/cs229_local.html
+++ b/ml_notes/cs229/cs229_local.html
@@ -269,11 +269,23 @@ y_0 &amp; = {\text{argmin}}_y \max_x f(x, y).
 <p>Let’s confirm that the Gaussian kernel is indeed a kernel. As a side note, this kernel is also referred to as the radial basis function kernel, or the RBF kernel. I’ll use <span class="math inline">\(K&#39;\)</span> for the function version and <span class="math inline">\(K\)</span> for the matrix version, both defined in a moment. The function is defined as</p>
 <p><span class="math display">\[K&#39;(x, z) = \exp\left(-\frac{||x-z||^2}{2\sigma^2}\right).\]</span></p>
 <p>Suppose we have a set of points <span class="math inline">\(\{x^{(1)}, \ldots, x^{(m)}\};\)</span> define matrix <span class="math inline">\(K\)</span> by letting <span class="math inline">\(K_{ij} = K&#39;(x^{(i)}, x^{(j)}).\)</span> By Mercer’s theorem, our job is to show that, for any vector <span class="math inline">\(z,\)</span> <span class="math inline">\(z^TKz \ge 0.\)</span></p>
-<p>Let’s proceed as follows:</p>
+<p>NOTE The solution below is not correct. I’m working on updating it with a correct version.</p>
+<p>Let’s proceed as follows, using <span class="math inline">\(c = -\frac{1}{2\sigma^2}:\)</span></p>
 <p><span class="math display">\[\begin{aligned}
 z^TKz &amp; = z_i K_{ij} z_j \\
-      &amp; = z_i z_j \exp(-||x^{(i)} - x^{(j)}||^2/2\sigma^2)
+      &amp; = z_i z_j \exp(c||x{^{(i)}}- x{^{(j)}}||^2) \\
+      &amp; = z_i z_j \exp\bigg(c\big(||x{^{(i)}}||^2 + ||x{^{(j)}}||^2 - 2\langle x{^{(i)}},
+           x{^{(j)}}\rangle\big) \bigg) \\
+      &amp; = z_i e^{c||x{^{(i)}}||^2} z_j e^{c||x{^{(j)}}||^2}
+              \exp\left(-2c\sum_k \big(x_k{^{(i)}}x_k{^{(j)}}\big)\right) \\
+      &amp; = z_i e^{c||x{^{(i)}}||^2} z_j e^{c||x{^{(j)}}||^2}
+              \prod_k e^{-2cx_k{^{(i)}}} e^{-2cx_k{^{(j)}}} \\
+      &amp; = \left(z_i e^{c||x{^{(i)}}||^2} \prod_k e^{-2cx_k{^{(i)}}}\right)
+          \left(z_j e^{c||x{^{(j)}}||^2} \prod_k e^{-2cx_k{^{(j)}}}\right) \\
+      &amp; = \left(z_i e^{c||x{^{(i)}}||^2} \prod_k e^{-2cx_k{^{(i)}}}\right)^2 \\
+      &amp; \ge 0.
 \end{aligned}\]</span></p>
+<p>That completes the proof.</p>
 <div id="refs" class="references">
 
 </div>
