--- a/ml_notes/cs229/cs229_local.html
+++ b/ml_notes/cs229/cs229_local.html
@@ -317,6 +317,9 @@ z-y &amp; = z - a + b = v + b. \\
   &amp; = k(x, y),
 \end{aligned}\]</span></p>
 <p>which completes the proof.</p>
+<h3 id="sequential-minimal-optimization-smo"><span class="header-section-number">3.1.4</span> Sequential minimal optimization (SMO)</h3>
+<p>SMO can be used to solve the dual optimization problem for support vector machines. I wonder: Can an SMO approach be used to solve a general linear or quadratic programming problem?</p>
+<p>The original SMO paper by John Platt specifically applied the algorithm to support vector machines. Based on a quick search, I don’t see any applications of SMO to other fields or problems. I could be missing something, but my answer so far is that SMO either hasn’t been tried or simply doesn’t offer new value as a more general approach.</p>
 <div id="refs" class="references">
 
 </div>
